--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -5,21 +5,37 @@
   <div class="card-body table-responsive">
     <table class="table table-hover">
       <thead class="text-warning">
-      <th>ID</th>
+      <th>№</th>
       <th>Title</th>
       <th>Category</th>
       <th>Priority</th>
-      <th>Status</th>
       <th>Date</th>
+      <th>Status</th>
       </thead>
       <tbody>
-      <tr *ngFor="let task of tasks">
-        <td>{{task.id}}</td>
+      <tr *ngFor="let task of tasks; let i = index" [class.completed]="task.completed">
+        <td>{{i + 1}}</td>
         <td>{{task.title}}</td>
-        <td></td>
-        <td></td>
-        <td></td>
-        <td></td>
+        <td [class.no-value]="task.category == null">
+          {{task.category != null ? task.category.title : 'No category'}}
+        </td>
+        <td [class.no-value]="task.priority == null">
+          {{task.priority != null ? task.priority.title : 'No priority'}}
+        </td>
+        <td [class.no-value]="task.date == null">
+          {{task.date != null ? (task.date | date : 'short') : 'No data'}}
+        </td>
+        <td>
+          <div class="form-check">
+            <label class="form-check-label">
+              <input [checked]="task.completed" class="form-check-input"
+                     type="checkbox" value="" (click)="toggleTaskCompleted(task)">
+              <span class="form-check-sign">
+                <span class="check"></span>
+              </span>
+            </label>
+          </div>
+        </td>
       </tr>
       </tbody>
     </table>
