--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -2,42 +2,58 @@
   <div class="card-header card-header-warning">
     <h4 class="card-title">Task list</h4>
   </div>
+
   <div class="card-body table-responsive">
-    <table class="table table-hover">
-      <thead class="text-warning">
-      <th>№</th>
-      <th>Title</th>
-      <th>Category</th>
-      <th>Priority</th>
-      <th>Date</th>
-      <th>Status</th>
-      </thead>
-      <tbody>
-      <tr *ngFor="let task of tasks; let i = index" [class.completed]="task.completed">
-        <td>{{i + 1}}</td>
-        <td>{{task.title}}</td>
-        <td [class.no-value]="task.category == null">
-          {{task.category != null ? task.category.title : 'No category'}}
+    <table [dataSource]="dataSource" mat-table>
+      <ng-container matColumnDef="color">
+        <th *matHeaderCellDef mat-header-cell></th>
+        <td class="col-color" *matCellDef="let task" [style.background-color]="getPriorityColor(task)"
+            mat-cell></td>
+      </ng-container>
+
+      <ng-container matColumnDef="id">
+        <th *matHeaderCellDef mat-header-cell></th>
+        <td class="col-id" *matCellDef="let index = index;" mat-cell>
+          {{index + 1}}
         </td>
-        <td [class.no-value]="task.priority == null">
-          {{task.priority != null ? task.priority.title : 'No priority'}}
+      </ng-container>
+
+      <ng-container matColumnDef="title">
+        <th *matHeaderCellDef mat-header-cell> Название</th>
+        <td class="col-title" *matCellDef="let task" [class.completed]="task.completed" mat-cell>
+          {{task.title}}
         </td>
-        <td [class.no-value]="task.date == null">
-          {{task.date != null ? (task.date | date : 'short') : 'No data'}}
+      </ng-container>
+
+      <ng-container matColumnDef="date">
+        <th *matHeaderCellDef mat-header-cell> Срок</th>
+        <td class="col-date" *matCellDef="let task" [ngClass]="{'completed': task.completed, 'nodate': task.date == null}"
+            mat-cell>
+          {{task.date | date: "medium"}}
         </td>
-        <td>
-          <div class="form-check">
-            <label class="form-check-label">
-              <input [checked]="task.completed" class="form-check-input"
-                     type="checkbox" value="" (click)="toggleTaskCompleted(task)">
-              <span class="form-check-sign">
-                <span class="check"></span>
-              </span>
-            </label>
-          </div>
+      </ng-container>
+
+      <ng-container matColumnDef="priority">
+        <th *matHeaderCellDef mat-header-cell> Приоритет</th>
+        <td class="col-priority" *matCellDef="let task"
+            [ngClass]="{'completed': task.completed, 'nopriority': task.priority == null}"
+            mat-cell>
+          {{task.priority ? task.priority.title : "Без приоритета"}}
         </td>
-      </tr>
-      </tbody>
+      </ng-container>
+
+      <ng-container matColumnDef="category">
+        <th *matHeaderCellDef mat-header-cell> Категория</th>
+        <td class="col-category" *matCellDef="let task"
+            [ngClass]="{'completed': task.completed, 'nocategory': task.category == null, 'link': !task.completed && task.category}"
+            mat-cell>
+          {{task.category ? task.category.title : "Без категории"}}
+        </td>
+      </ng-container>
+
+      <tr *matHeaderRowDef="displayedColumns; " mat-header-row></tr>
+
+      <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
     </table>
   </div>
 </div>
