--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -3,7 +3,7 @@
     <h4 class="card-title">Task list</h4>
   </div>
 
-  <div class="card-body table-responsive" *ngIf="tasks.length > 0">
+  <div class="card-body table-responsive" *ngIf="tasks && tasks.length > 0">
     <table [dataSource]="dataSource" mat-table matSort>
       <ng-container matColumnDef="color">
         <th *matHeaderCellDef mat-header-cell></th>
@@ -20,7 +20,7 @@
 
       <ng-container matColumnDef="title">
         <th *matHeaderCellDef mat-header-cell mat-sort-header="title"> Название</th>
-        <td class="col-title" *matCellDef="let task" [class.completed]="task.completed" mat-cell>
+        <td class="col-title pointer" *matCellDef="let task" [class.completed]="task.completed" mat-cell (click)="onClickTask(task)">
           {{task.title}}
         </td>
       </ng-container>
@@ -59,5 +59,5 @@
     <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
   </div>
 
-  <div *ngIf="tasks.length == 0"><p class="not-found">Ничего не найдено</p></div>
+  <div *ngIf="tasks && tasks.length == 0"><p class="not-found">Ничего не найдено</p></div>
 </div>
