--- a/src/styles.css
+++ b/src/styles.css
@@ -15,3 +15,7 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
 .pointer {
   cursor: pointer;
 }
+
+.size25 {
+  font-size: 25px !important;
+}
