--- a/src/app/dialog/edit-task-dialog/edit-task-dialog.component.html
+++ b/src/app/dialog/edit-task-dialog/edit-task-dialog.component.html
@@ -12,6 +12,22 @@
       <mat-icon>clear</mat-icon>
     </button>
   </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Укажите категорию</mat-label>
+    <mat-select [(ngModel)]="tmpCategory">
+      <mat-option [value]="null">Без категории</mat-option>
+      <mat-option *ngFor="let cat of categories" [value]="cat">{{cat.title}}</mat-option>
+    </mat-select>
+  </mat-form-field>
+
+  <mat-form-field>
+    <mat-label>Укажите приоритет</mat-label>
+    <mat-select [(ngModel)]="tmpPriority">
+      <mat-option [value]="null">Без приоритета</mat-option>
+      <mat-option *ngFor="let pri of priorities" [value]="pri">{{pri.title}}</mat-option>
+    </mat-select>
+  </mat-form-field>
 </mat-dialog-content>
 
 <mat-dialog-actions>
