--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -77,7 +77,10 @@
 
         <div class="row">
           <div class="col-12">
-            <app-tasks [tasks]="tasks" (updateTask)="onUpdateTask($event)"></app-tasks>
+            <app-tasks [tasks]="tasks"
+                       (updateTask)="onUpdateTask($event)"
+                       (deleteTask)="onDeleteTask($event)">
+            </app-tasks>
           </div>
         </div>
       </div>
