--- a/src/app/dialog/edit-task-dialog/edit-task-dialog.component.html
+++ b/src/app/dialog/edit-task-dialog/edit-task-dialog.component.html
@@ -31,16 +31,28 @@
 </mat-dialog-content>
 
 <mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="onConfirm()"
-          [disabled]="inputTitle.value.trim().length == 0">
-    Сохранить
-  </button>
+  <div class="col-md-5 col-12">
+    <button mat-raised-button color="primary" (click)="onConfirm()"
+            [disabled]="inputTitle.value.trim().length == 0">
+      Сохранить
+    </button>
 
-  <button mat-raised-button (click)="onCancel()">
-    Отмена
-  </button>
+    <button mat-raised-button (click)="onCancel()">
+      Отмена
+    </button>
+  </div>
 
-  <button mat-button class="red" (click)="delete()">
-    Удалить задачу
-  </button>
+  <div class="col-md-7 col 12 text-right">
+    <button mat-button class="green" *ngIf="!task.completed" (click)="complete()">
+      Завершить задачу
+    </button>
+
+    <button mat-button class="green" *ngIf="task.completed" (click)="activate()">
+      Активировать задачу
+    </button>
+
+    <button mat-button class="red" (click)="delete()">
+      Удалить задачу
+    </button>
+  </div>
 </mat-dialog-actions>
