--- a/src/app/dialog/edit-task-dialog/edit-task-dialog.component.html
+++ b/src/app/dialog/edit-task-dialog/edit-task-dialog.component.html
@@ -28,6 +28,21 @@
       <mat-option *ngFor="let pri of priorities" [value]="pri">{{pri.title}}</mat-option>
     </mat-select>
   </mat-form-field>
+
+  <mat-form-field>
+    <input matInput placeholder="Укажите срок выполнения" #inputDate
+           readonly="true" [matDatepicker]="picker" [(ngModel)]="tmpDate"
+           (click)="picker.open()">
+
+    <mat-datepicker-toggle matSuffix [for]="picker"></mat-datepicker-toggle>
+    <mat-datepicker #picker></mat-datepicker>
+
+    <button *ngIf="inputDate.value.trim().length > 0" MatButton
+            matSuffix mat-icon-button aria-label="Clear"
+            (click)="tmpDate = null" class="size25">
+      <mat-icon>clear</mat-icon>
+    </button>
+  </mat-form-field>
 </mat-dialog-content>
 
 <mat-dialog-actions>
