--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -29,7 +29,7 @@
         <th *matHeaderCellDef mat-header-cell mat-sort-header="date"> Срок</th>
         <td class="col-date" *matCellDef="let task" [ngClass]="{'completed': task.completed, 'no-value': task.date == null}"
             mat-cell>
-          {{task.date ? (task.date | date: "medium") : "Без даты"}}
+          {{task.date | taskDate}}
         </td>
       </ng-container>
 
