--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,8 +1,12 @@
 <div class="wrapper ">
 
-  <app-categories (selectCategory)="onSelectCategory($event)" [categories]="categories"></app-categories>
+  <app-categories (selectCategory)="onSelectCategory($event)"
+                  [selectedCategory]="selectedCategory"
+                  [categories]="categories">
+  </app-categories>
 
   <div class="main-panel">
+
     <!-- Navbar -->
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
       <div class="container-fluid">
@@ -71,6 +75,7 @@
         </div>
       </div>
     </nav>
+
     <!-- End Navbar -->
     <div class="content">
       <div class="container-fluid">
@@ -79,12 +84,14 @@
           <div class="col-12">
             <app-tasks [tasks]="tasks"
                        (updateTask)="onUpdateTask($event)"
-                       (deleteTask)="onDeleteTask($event)">
+                       (deleteTask)="onDeleteTask($event)"
+                       (selectCategory)="onSelectCategory($event)">
             </app-tasks>
           </div>
         </div>
       </div>
     </div>
+
     <footer class="footer">
       <div class="container-fluid">
         <nav class="float-left">
@@ -121,8 +128,10 @@
         </div>
       </div>
     </footer>
+
   </div>
 </div>
+
 <div class="fixed-plugin">
   <div class="dropdown show-dropdown">
     <a data-toggle="dropdown" href="#">
