--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -1,19 +1,30 @@
 <div class="sidebar" data-background-color="white" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
 
   <div class="logo">
-    <a class="simple-text logo-normal" href="http://www.creative-tim.com">
-      Creative Tim
+    <a class="simple-text logo-normal">
+      Категории
     </a>
   </div>
 
   <div class="sidebar-wrapper">
     <ul class="nav">
+
+      <li class="nav-item category pointer" (click)="showTasksByCategory(null)"
+          [class.active]="selectedCategory === null">
+        <a class="nav-link ">
+          <span class="all-category-title">Все</span>
+        </a>
+      </li>
+
+      <div class="line"></div>
+
       <li class="nav-item pointer" *ngFor="let category of categories"
           (click)="showTasksByCategory(category)" [class.active]="category === selectedCategory">
         <a class="nav-link">
           <p>{{category.title}}</p>
         </a>
       </li>
+
     </ul>
   </div>
 </div>
