--- a/src/app/views/categories/categories.component.css
+++ b/src/app/views/categories/categories.component.css
@@ -3,6 +3,24 @@
 }
 
 .all-category-title {
-  font-size: medium;
-  font-weight: bold;
+  font-size: 16px;
+  display: inline-block;
+  width: 85%;
+}
+
+.category-title {
+  width: 70%;
+  display: inline-block;
+  font-size: 16px;
+}
+
+.edit-category-icon-area {
+  width: 15%;
+  display: inline-block;
+  text-align: left;
+  font-size: 13px;
+}
+
+.edit-category-icon {
+  color: #dadada;
 }
