--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -9,19 +9,30 @@
   <div class="sidebar-wrapper">
     <ul class="nav">
 
-      <li class="nav-item category pointer" (click)="showTasksByCategory(null)"
+      <li class="nav-item category" (click)="showTasksByCategory(null)"
           [class.active]="selectedCategory === null">
-        <a class="nav-link ">
+        <a class="nav-link pointer">
           <span class="all-category-title">Все</span>
         </a>
       </li>
 
       <div class="line"></div>
 
-      <li class="nav-item pointer" *ngFor="let category of categories"
-          (click)="showTasksByCategory(category)" [class.active]="category === selectedCategory">
+      <li class="nav-item pointer" *ngFor="let category of categories; let i = index"
+          (click)="showTasksByCategory(category)"
+          (mouseleave)="showEditIcon(null)"
+          (mouseenter)="showEditIcon(i)"
+          [class.active]="category === selectedCategory">
         <a class="nav-link">
-          <p>{{category.title}}</p>
+          <span class="category-title">{{category.title}}</span>
+
+          <span class="edit-category-icon-area">
+            <mat-icon *ngIf="indexMouseMove === i"
+                      (click)="$event.stopPropagation(); openEditDialog(category)"
+                      class="edit-category-icon">
+              edit
+            </mat-icon>
+          </span>
         </a>
       </li>
 
