--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -85,8 +85,12 @@
         <div class="row">
           <div class="col-12">
             <app-tasks [tasks]="tasks"
+                       [priorities]="priorities"
                        (updateTask)="onUpdateTask($event)"
                        (deleteTask)="onDeleteTask($event)"
+                       (filterByTitle)="onSearchTasks($event)"
+                       (filterByStatus)="onFilterTasksByStatus($event)"
+                       (filterByPriority)="onFilterTasksByPriority($event)"
                        (selectCategory)="onSelectCategory($event)">
             </app-tasks>
           </div>
