--- a/src/app/dialog/edit-category-dialog/edit-category-dialog.component.html
+++ b/src/app/dialog/edit-category-dialog/edit-category-dialog.component.html
@@ -26,7 +26,7 @@
   </div>
 
   <div class="col-12 text-center">
-    <button *ngIf="canDelete" mat-button (click)="delete()" class="red">
+    <button *ngIf="canDelete()" mat-button (click)="delete()" class="red">
       Удалить
     </button>
   </div>
