--- a/src/app/views/categories/categories.component.css
+++ b/src/app/views/categories/categories.component.css
@@ -24,3 +24,28 @@
 .edit-category-icon {
   color: #dadada;
 }
+
+span.add-icon-area {
+  width: 20%;
+  display: inline-block;
+  text-align: left;
+}
+
+.nav-title {
+  width: 80%;
+  display: inline-block;
+  font-size: 20px;
+  text-align: center;
+  vertical-align: middle;
+}
+
+#categories {
+  width: 100%;
+  overflow-x: hidden;
+}
+
+.add-icon {
+  cursor: pointer;
+  font-size: 25px;
+  vertical-align: middle;
+}
