--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -1,9 +1,13 @@
 <div class="sidebar" data-background-color="white" data-color="purple" data-image="../assets/img/sidebar-1.jpg">
 
   <div class="logo">
-    <a class="simple-text logo-normal">
-      Категории
-    </a>
+    <span class="nav-title">Категории</span>
+
+    <span class="add-icon-area">
+      <button mat-icon-button class="add-icon" (click)="openAddDialog()">
+        <mat-icon>add</mat-icon>
+      </button>
+    </span>
   </div>
 
   <div class="sidebar-wrapper">
