--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -59,7 +59,7 @@
       </div>
 
       <div class="text-right col-6">
-        <button mat-raised-button color="primary">Добавить</button>
+        <button mat-raised-button color="primary" (click)="openAddTaskDialog()">Добавить</button>
       </div>
     </div>
   </div>
