--- a/src/app/views/categories/categories.component.css
+++ b/src/app/views/categories/categories.component.css
@@ -49,3 +49,15 @@ span.add-icon-area {
   font-size: 25px;
   vertical-align: middle;
 }
+
+.search-category-area {
+  padding-left: 20px;
+  padding-right: 20px;
+  background-color: #f2f2f2;
+  border-radius: 6px;
+}
+
+.search-category-button {
+  margin-left: 10px;
+  font-size: 25px;
+}
