--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -22,8 +22,10 @@
     <div class="content">
       <div class="container-fluid">
 
-        <app-stat>
-
+        <app-stat
+          [totalTasksInCategory]="totalTasksCountInCategory"
+          [completeTasksInCategory]="completedCountInCategory"
+          [uncompleteTasksInCategory]="uncompletedCountInCategory">
         </app-stat>
 
         <div class="row">
