--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -13,8 +13,9 @@
 
     <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
 
-      <app-header>
-
+      <app-header [categoryName]="selectedCategory ? selectedCategory.title : 'Все'"
+                  (toggleStat)="toggleStat($event)"
+                  [showStat]="showStat">
       </app-header>
 
     </nav>
@@ -25,7 +26,8 @@
         <app-stat
           [totalTasksInCategory]="totalTasksCountInCategory"
           [completeTasksInCategory]="completedCountInCategory"
-          [uncompleteTasksInCategory]="uncompletedCountInCategory">
+          [uncompleteTasksInCategory]="uncompletedCountInCategory"
+          [showStat]="showStat">
         </app-stat>
 
         <div class="row">
