--- a/src/styles.css
+++ b/src/styles.css
@@ -45,3 +45,10 @@ body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
   border-bottom: 1px solid #dadada;
   padding-top: 20px;
 }
+.main-panel > .content {
+  margin-top: 30px !important;
+}
+
+app-header {
+  width: 100%;
+}
