--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -8,12 +8,12 @@
     </div>
 
     <div class="col-2 text-right align-self-top">
-      <button mat-icon-button   class="header-icon">
-        <mat-icon  >settings</mat-icon>
+      <button mat-icon-button class="header-icon" (click)="showSettings()">
+        <mat-icon>settings</mat-icon>
       </button>
 
-      <button mat-icon-button    class="header-icon">
-        <mat-icon   >help</mat-icon>
+      <button mat-icon-button class="header-icon">
+        <mat-icon>help</mat-icon>
       </button>
     </div>
   </div>
