added a counter of uncompleted tasks

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,6 +6,8 @@
                   (addCategory)="onAddCategory($event)"
                   (searchCategory)="onSearchCategory($event)"
                   [selectedCategory]="selectedCategory"
+                  [categoryMap]="categoryMap"
+                  [uncompletedTotal]="uncompletedTotalTasksCount"
                   [categories]="categories">
   </app-categories>
 
