--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,74 +1,91 @@
-<div class="wrapper ">
+<ng-sidebar-container style="height: 100vh">
 
-  <div class="sidebar"
-       data-color="purple"
-       data-step="1"
-       data-intro="Фильтрация задач, добавление, удаление, редактирование категорий"
-       data-position='right'>
+  <ng-sidebar [opened]="menuOpened"
+              [closeOnClickOutside]="false"
+              [closeOnClickBackdrop]="true"
+              [showBackdrop]="showBackdrop"
+              [mode]="menuMode"
+              [animate]="true"
+              [position]="menuPosition"
+              [autoFocus]="false"
+              (onClosed)="onClosedMenu()">
 
-    <app-categories (selectCategory)="onSelectCategory($event)"
-                    (deleteCategory)="onDeleteCategory($event)"
-                    (updateCategory)="onUpdateCategory($event)"
-                    (addCategory)="onAddCategory($event)"
-                    (searchCategory)="onSearchCategory($event)"
-                    [selectedCategory]="selectedCategory"
-                    [categoryMap]="categoryMap"
-                    [uncompletedTotal]="uncompletedTotalTasksCount"
-                    [categories]="categories">
-    </app-categories>
+    <div class="sidebar"
+         data-color="purple"
+         data-step="1"
+         data-intro="Фильтрация задач, добавление, удаление, редактирование категорий"
+         data-position='right'>
 
-  </div>
+      <app-categories (selectCategory)="onSelectCategory($event)"
+                      (deleteCategory)="onDeleteCategory($event)"
+                      (updateCategory)="onUpdateCategory($event)"
+                      (addCategory)="onAddCategory($event)"
+                      (searchCategory)="onSearchCategory($event)"
+                      [selectedCategory]="selectedCategory"
+                      [categoryMap]="categoryMap"
+                      [uncompletedTotal]="uncompletedTotalTasksCount"
+                      [categories]="categories">
+      </app-categories>
 
+    </div>
 
-  <div class="main-panel">
+  </ng-sidebar>
 
-    <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
+  <div ng-sidebar-content>
 
-      <app-header [categoryName]="selectedCategory ? selectedCategory.title : 'Все'"
-                  (toggleStat)="toggleStat($event)"
-                  [showStat]="showStat">
-      </app-header>
+    <div class="main-panel">
 
-    </nav>
+      <nav class="navbar navbar-expand-lg navbar-transparent navbar-absolute fixed-top ">
 
-    <div class="content">
-      <div class="container-fluid">
+        <app-header [categoryName]="selectedCategory ? selectedCategory.title : 'Все'"
+                    (toggleStat)="toggleStat($event)"
+                    (toggleMenu)="toggleMenu()"
+                    [showStat]="showStat">
+        </app-header>
 
-        <div data-step="2"
-             data-intro="Список всех задач со статистикой"
-             data-position='top'>
+      </nav>
 
-          <app-stat
-            [totalTasksInCategory]="totalTasksCountInCategory"
-            [completeTasksInCategory]="completedCountInCategory"
-            [uncompleteTasksInCategory]="uncompletedCountInCategory"
-            [showStat]="showStat">
-          </app-stat>
-        </div>
+      <div class="content">
+        <div class="container-fluid">
 
-        <div class="row">
-          <div class="col-12">
+          <div data-step="2"
+               data-intro="Список всех задач со статистикой"
+               data-position='top'>
 
-            <app-tasks [tasks]="tasks"
-                       [priorities]="priorities"
-                       [selectedCategory]="selectedCategory"
-                       (addTask)="onAddTask($event)"
-                       (updateTask)="onUpdateTask($event)"
-                       (deleteTask)="onDeleteTask($event)"
-                       (filterByTitle)="onSearchTasks($event)"
-                       (filterByStatus)="onFilterTasksByStatus($event)"
-                       (filterByPriority)="onFilterTasksByPriority($event)"
-                       (selectCategory)="onSelectCategory($event)">
-            </app-tasks>
+            <app-stat
+              [totalTasksInCategory]="totalTasksCountInCategory"
+              [completeTasksInCategory]="completedCountInCategory"
+              [uncompleteTasksInCategory]="uncompletedCountInCategory"
+              [showStat]="showStat">
+            </app-stat>
+          </div>
 
+          <div class="row">
+            <div class="col-12">
+
+              <app-tasks [tasks]="tasks"
+                         [priorities]="priorities"
+                         [selectedCategory]="selectedCategory"
+                         (addTask)="onAddTask($event)"
+                         (updateTask)="onUpdateTask($event)"
+                         (deleteTask)="onDeleteTask($event)"
+                         (filterByTitle)="onSearchTasks($event)"
+                         (filterByStatus)="onFilterTasksByStatus($event)"
+                         (filterByPriority)="onFilterTasksByPriority($event)"
+                         (selectCategory)="onSelectCategory($event)">
+              </app-tasks>
+
+            </div>
           </div>
         </div>
       </div>
+
+      <app-footer>
+
+      </app-footer>
+
     </div>
 
-    <app-footer>
-
-    </app-footer>
-
   </div>
-</div>
+
+</ng-sidebar-container>
