--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -7,8 +7,8 @@
       </button>
 
       <p class="navbar-brand">{{categoryName}}</p>
-      <p class="link navbar-brand" (click)="onToggleStat()" *ngIf="showStat">Скрыть статистику</p>
-      <p class="link navbar-brand" (click)="onToggleStat()" *ngIf="!showStat">Показать статистику</p>
+      <p class="link navbar-brand" (click)="onToggleStat()" *ngIf="showStat && !isMobile">Скрыть статистику</p>
+      <p class="link navbar-brand" (click)="onToggleStat()" *ngIf="!showStat && !isMobile">Показать статистику</p>
     </div>
 
     <div class="col-2 text-right align-self-top">
@@ -16,7 +16,8 @@
         <mat-icon>settings</mat-icon>
       </button>
 
-      <button mat-icon-button class="header-icon" (click)="showIntroHelp()">
+      <button *ngIf="!isMobile"
+              mat-icon-button class="header-icon" (click)="showIntroHelp()">
         <mat-icon>help</mat-icon>
       </button>
     </div>
