--- a/src/app/views/priorities/priorities.component.css
+++ b/src/app/views/priorities/priorities.component.css
@@ -9,6 +9,32 @@
   width: 40px;
   float: left
 }
+
+
+.priorities p {
+  margin: 0 !important;
+}
+
+.little {
+  font-size: 14px;
+  color: rgba(99, 99, 99, 0.98);
+  margin-top: 20px;
+}
+
+
+
+/*
+.priority-titles {
+  vertical-align: middle;
+  width: 150px;
+  float: left;
+}
+
+.priority-color {
+  vertical-align: middle;
+  width: 40px;
+  float: left
+}
 .color-circle {
   height: 25px;
   width: 25px;
@@ -27,3 +53,4 @@
   color: rgba(99,99,99,0.98);
   margin-top: 20px;
 }
+*/
