--- a/src/app/dialog/confirm-dialog/confirm-dialog.component.html
+++ b/src/app/dialog/confirm-dialog/confirm-dialog.component.html
@@ -5,6 +5,6 @@
 </div>
 
 <div mat-dialog-actions>
-  <button mat-raised-button color="primary" (click)="onConfirm()">Ок</button>
-  <button mat-button (click)="onCancel()">Отмена</button>
+  <button mat-raised-button color="primary" (click)="confirm()">Ок</button>
+  <button mat-button (click)="cancel()">Отмена</button>
 </div>
