--- a/src/app/dialog/edit-priority-dialog/edit-priority-dialog.component.html
+++ b/src/app/dialog/edit-priority-dialog/edit-priority-dialog.component.html
@@ -4,29 +4,31 @@
   <mat-form-field>
     <mat-label>Название (20 символов)</mat-label>
     <input #inputTitle
-           (keydown.enter)="onConfirm()" [(ngModel)]="priorityTitle"
+           (keydown.enter)="confirm()" [(ngModel)]="priority.title"
            matInput maxlength="20">
-    <button (click)="priorityTitle= ''"
-            *ngIf="priorityTitle.trim().length > 0"
-            aria-label="Clear" class="clear-icon size25"
+    <button (click)="priority.title= ''"
+            *ngIf="priority && priority.title.trim().length > 0"
+            aria-label="Clear" class="clear-icon"
             mat-icon-button matSuffix>
       <mat-icon>clear</mat-icon>
     </button>
   </mat-form-field>
+
+  <span [(colorPicker)]="priority.color" [style.background]="priority.color" class="color-circle"></span>
 </mat-dialog-content>
 
 <mat-dialog-actions>
   <div class="col-12 text-center">
-    <button (click)="onConfirm()" [disabled]="inputTitle.value.trim().length==0"
+    <button (click)="confirm()" [disabled]="inputTitle.value.trim().length==0"
             color="primary" mat-raised-button>
       Сохранить
     </button>
 
-    <button (click)="onCancel()" mat-raised-button>Отмена</button>
+    <button (click)="cancel()" mat-raised-button>Отмена</button>
   </div>
 
   <div class="col-12 text-center">
-    <button (click)="delete()" *ngIf="canDelete()"
+    <button (click)="delete()" *ngIf="canDelete"
             class="red" mat-button>
       Удалить
     </button>
