--- a/src/app/views/categories/categories.component.html
+++ b/src/app/views/categories/categories.component.html
@@ -1,4 +1,4 @@
-
+<div id="categories">
   <div class="logo">
     <span class="nav-title">Категории</span>
 
@@ -12,51 +12,60 @@
   <div class="sidebar-wrapper">
     <ul class="nav">
 
-      <div class="search-category-area">
+      <div class="search-category-area" >
         <mat-form-field class="example-full-width">
-          <input #inputSearchCategory (keydown.escape)="searchCategoryTitle = ''; search()"
-                 (keyup)="search()" [(ngModel)]="searchCategoryTitle" matInput
+          <input (keydown.escape)="clearAndSearch()"
+                 (ngModelChange)="this.checkFilterChanged()"
+                 [(ngModel)]="filterTitle" matInput
                  maxlength="256" placeholder="Поиск категорий">
 
-          <button (click)="searchCategoryTitle = ''; search()"
-                  *ngIf="inputSearchCategory.value.trim().length > 0" aria-label="Clear"
-                  class="search-category-button size25 gray"
+          <button (click)="clearAndSearch()"
+                  *ngIf="filterTitle && filterTitle.trim().length > 0" aria-label="Clear"
+                  class="search-category-button"
                   mat-icon-button matSuffix>
             <mat-icon>clear</mat-icon>
+          </button>
+
+          <button (click)="search()"
+                  *ngIf="filterTitle && filterTitle.trim().length > 0"
+                  [ngClass]="{'blink-button': filterChanged}"
+
+                  mat-icon-button matSuffix>
+            <mat-icon>search</mat-icon>
           </button>
         </mat-form-field>
       </div>
 
-      <li class="nav-item category" (click)="showTasksByCategory(null)"
+      <li class="nav-item category" (click)="showCategory(null)"
           [class.active]="selectedCategory === null">
-        <a class="nav-link pointer">
+        <a class="nav-link">
           <span class="all-category-title">Все</span>
-          <span class="uncompleted-count">{{uncompletedTotal}}</span>
+          <span class="uncompleted-count">{{uncompletedCountForCategoryAll || 0}}</span>
         </a>
       </li>
 
       <div class="line"></div>
 
-      <div *ngIf="selectedCategoryMap.size === 0"><p class="not-found">Ничего не найдено</p></div>
+      <div *ngIf="!categories || categories.length === 0"><p class="not-found">Ничего не найдено</p></div>
 
-      <li class="nav-item pointer"
-          *ngFor="let mapValue of selectedCategoryMap | keyvalue; let i = index"
-          (click)="showTasksByCategory(mapValue.key)"
-          (mouseleave)="showEditIcon(null)"
-          (mouseenter)="showEditIcon(i)"
-          [class.active]="mapValue.key === selectedCategory">
+      <li class="nav-item category"
+          *ngFor="let category of categories, let i = index"
+          (click)="showCategory(category)"
+          (mouseleave)="showEditIcon(false, i)"
+          (mouseenter)="showEditIcon(true, i)"
+          [class.active]="(selectedCategory && category) && category.id === selectedCategory.id">
         <a class="nav-link">
-          <span class="category-title">{{mapValue.key.title}}</span>
+          <span class="category-title">{{category.title}}</span>
 
           <span class="edit-category-icon-area">
-            <mat-icon *ngIf="indexMouseMove === i || isMobile || isTablet"
-                      (click)="$event.stopPropagation(); openEditDialog(mapValue.key)"
+            <mat-icon *ngIf="(showEditIcon && i == indexMouseMove) || isMobile"
+                      (click)="$event.stopPropagation(); openEditDialog(category)"
                       class="edit-category-icon">
               edit
             </mat-icon>
           </span>
 
-          <span class="uncompleted-count">{{mapValue.value}}</span>
+          <span class="uncompleted-count">{{category.uncompletedCount || 0}}</span>
 
         </a>
       </li>
@@ -65,4 +74,4 @@
   </div>
   <div class="sidebar-background"></div>
 
-
+</div>
