--- a/src/app/views/header/header.component.html
+++ b/src/app/views/header/header.component.html
@@ -1,17 +1,16 @@
-<div class="container-fluid">
-  <div class="row settings">
+<div class="container-fluid settings">
 
-    <div class="col-10 text-left align-self-top">
+    <div class="col-8 text-left align-self-top">
       <button mat-icon-button type="button" (click)="onToggleMenu()">
         <mat-icon>menu</mat-icon>
       </button>
 
-      <p class="navbar-brand">{{categoryName}}</p>
       <p class="link navbar-brand" (click)="onToggleStat()" *ngIf="showStat && !isMobile">Скрыть статистику</p>
       <p class="link navbar-brand" (click)="onToggleStat()" *ngIf="!showStat && !isMobile">Показать статистику</p>
+      <p class="navbar-brand"><span *ngIf="!isMobile">Категория: </span>"{{categoryName}}"</p>
     </div>
 
-    <div class="col-2 text-right align-self-top">
+    <div class="col-4 text-right align-self-top">
       <button mat-icon-button class="header-icon" (click)="showSettings()">
         <mat-icon>settings</mat-icon>
       </button>
@@ -21,5 +20,4 @@
         <mat-icon>help</mat-icon>
       </button>
     </div>
-  </div>
 </div>
