--- a/src/app/views/priorities/priorities.component.html
+++ b/src/app/views/priorities/priorities.component.html
@@ -2,7 +2,7 @@
 
   <div class="row align-self-baseline">
     <div class="col-7 ">
-      <a class="pointer" (click)="onEditPriority(priority)">{{priority.title}}</a>
+      <a class="pointer" (click)="openEditDialog(priority)">{{priority.title}}</a>
     </div>
 
     <div class="col-2 text-right">
@@ -12,13 +12,13 @@
     </div>
 
     <div class="col-1 text-left">
-      <p class="pointer gray" (click)="delete(priority)">
+      <p class="pointer gray" (click)="onDeleteDialog(priority)">
         <mat-icon>delete</mat-icon>
       </p>
     </div>
 
     <div class="col-1 text-left">
-      <p class="pointer gray" (click)="onEditPriority(priority)">
+      <p class="pointer gray" (click)="openEditDialog(priority)">
         <mat-icon>edit</mat-icon>
       </p>
     </div>
@@ -26,6 +26,6 @@
 
 </div>
 
-<p class="link little" (click)="onAddPriority()">
+<p class="link little" (click)="openAddDialog()">
   Добавить приоритет
 </p>
