--- a/src/app/views/tasks/tasks.component.html
+++ b/src/app/views/tasks/tasks.component.html
@@ -1,167 +1,219 @@
-<div class="row">
-
-  <div class="col-md-3 col-sm-12">
-    <mat-form-field>
-      <input #filterInput (keydown.escape)="searchTaskText = ''; onFilterByTitle()"
-             (keyup)="onFilterByTitle()" [(ngModel)]="searchTaskText"
-             matInput placeholder="Поиск в текущей категории">
-      <button (click)="searchTaskText = ''; onFilterByTitle()"
-              *ngIf="filterInput.value.trim().length > 0"
-              aria-label="Clear" class="clear-icon size25 gray"
-              MatButton mat-icon-button matSuffix>
-        <mat-icon>clear</mat-icon>
-      </button>
-    </mat-form-field>
+<div class="row" *ngIf="isMobile">
+  <div class="col-md-2 col-sm-12 text-left align-middle">
+    <span class="link " (click)="onToggleSearch()" *ngIf="showSearch">Скрыть поиск</span>
+    <span class="link " (click)="onToggleSearch()" *ngIf="!showSearch">Показать поиск </span>
   </div>
+</div>
 
-  <div class="col-md-3 col-sm-12">
+<div class="row" *ngIf="!showSearch">
+
+  <div class="col-md-2 col-sm-12">
     <mat-form-field>
-      <mat-select #statusFilter (valueChange)="onFilterByStatus($event)"
-                  [value]="selectedStatusFilter" placeholder="Фильтр по статусу">
-        <mat-option [value]="null">Все статусы</mat-option>
-        <mat-option [value]="true">Завершенные задачи</mat-option>
-        <mat-option [value]="false">Незавершенные задачи</mat-option>
-      </mat-select>
-
-      <button (click)="$event.stopPropagation(); onFilterByStatus(null)"
-              *ngIf="selectedStatusFilter != null"
-              aria-label="Clear" class="clear-icon size25 gray"
+      <input [(ngModel)]="filterTitle" (ngModelChange)="this.checkFilterChanged()"
+             (keydown.escape)="$event.stopPropagation(); filterTitle=''; checkFilterChanged()"
+             matInput placeholder="Название">
+      <button (click)="$event.stopPropagation(); filterTitle=''; checkFilterChanged()"
+              *ngIf="filterTitle && filterTitle.trim().length > 0"
+              aria-label="Clear" class="clear-icon"
               mat-icon-button matSuffix>
         <mat-icon>clear</mat-icon>
       </button>
     </mat-form-field>
   </div>
 
-  <div class="col-md-3 col-sm-12">
+  <div class="col-md-2 col-sm-12">
     <mat-form-field>
-      <mat-select [value]="selectedPriorityFilter" (valueChange)="onFilterByPriority($event)"
-                  placeholder="Фильтр по приоритетам">
-        <mat-option [value]="null">Все приоритеты</mat-option>
-        <mat-option *ngFor="let priority of priorities" [value]="priority">{{priority.title}}</mat-option>
+      <mat-select [(ngModel)]="filterCompleted"
+                  (selectionChange)="checkFilterChanged()" placeholder="Фильтр по статусу">
+        <mat-option [value]="null">Все статусы</mat-option>
+        <mat-option [value]="1">Завершенные задачи</mat-option>
+        <mat-option [value]="0">Незавершенные задачи</mat-option>
       </mat-select>
 
-      <button *ngIf="selectedPriorityFilter != null"
-              class="clear-icon size25" matSuffix mat-icon-button
-              aria-label="Clear" (click)="$event.stopPropagation(); onFilterByPriority(null)">
+      <button (click)="$event.stopPropagation(); filterCompleted = null; checkFilterChanged()"
+              *ngIf="filterCompleted != null"
+              aria-label="Clear" class="clear-icon"
+              mat-icon-button matSuffix>
         <mat-icon>clear</mat-icon>
       </button>
     </mat-form-field>
   </div>
 
-  <div class="col-md-3 col-sm-12 text-right">
-    <div class="row padding-top-20">
-      <div class="text-left col-6">
-        <button *ngIf="selectedStatusFilter != null || (searchTaskText != null && searchTaskText.trim() != '')"
-                matSuffix mat-button aria-label="Clear"
-                (click)="$event.stopPropagation(); onFilterByStatus(null); searchTaskText = ''; onFilterByTitle()"
-                class="nopadding-left">
-          Сбросить фильтры
-        </button>
-      </div>
+  <div class="col-md-2 col-sm-12">
+    <mat-form-field>
+      <mat-select [(ngModel)]="filterPriorityId" (selectionChange)="checkFilterChanged()"
+                  placeholder="Фильтр по приоритетам">
+        <mat-option [value]="null">Все приоритеты</mat-option>
+        <mat-option *ngFor="let priority of priorities" [value]="priority.id">{{priority.title}}</mat-option>
+      </mat-select>
 
-      <div class="text-right col-6">
-        <button mat-raised-button color="primary" (click)="openAddTaskDialog()">Добавить</button>
-      </div>
-    </div>
+      <button *ngIf="filterPriorityId != null"
+              class="clear-icon" matSuffix mat-icon-button
+              aria-label="Clear" (click)="$event.stopPropagation(); filterPriorityId = null; checkFilterChanged() ">
+        <mat-icon>clear</mat-icon>
+      </button>
+    </mat-form-field>
   </div>
 
+  <div class="col-md-2 col-sm-12">
+    <mat-form-field>
+      <mat-select [(ngModel)]="filterSortColumn"
+                  placeholder="Сортировка"
+                  (selectionChange)="checkFilterChanged()">
+        <mat-option value='title'>Название</mat-option>
+        <mat-option value='date'>Срок</mat-option>
+        <mat-option value='priority'>Приоритет</mat-option>
+        <mat-option value='category'>Категория</mat-option>
+      </mat-select>
+    </mat-form-field>
+  </div>
 
+  <div class="col-md-4 col-sm-12" [ngClass]="{'sort': !isMobile}">
+    <span *ngIf="isMobile">Сортировка: </span>
+
+    <button matSuffix mat-icon-button
+            aria-label="Sort direction"
+            (click)="$event.stopPropagation(); changedSortDirection(); checkFilterChanged()">
+      <mat-icon>{{this.sortIconName}}</mat-icon>
+    </button>
+
+    <button [ngClass]="{'search-button': true, 'blink-button': changed}" mat-raised-button color="accent"
+            (click)="initSearch()">
+      <mat-icon>search</mat-icon>
+    </button>
+
+    <button matSuffix mat-button aria-label="Clear"
+            (click)="$event.stopPropagation(); clearSearchValues(); checkFilterChanged()">
+      Очистить
+    </button>
+  </div>
+</div>
+
+<div class="gap10">&nbsp;</div>
+
+<div class="row ">
+  <div class="col-md-2 col-sm-12">
+    <button [ngClass]="{'full-width': true}"
+            mat-raised-button color="primary" (click)="openAddDialog()">
+      Добавить задачу
+    </button>
+  </div>
+
+  <div class="col-md-2 col-sm-12 text-left align-middle align-self-center" *ngIf="!isMobile">
+    <span class="link " (click)="onToggleSearch()" *ngIf="showSearch">Показать поиск</span>
+    <span class="link " (click)="onToggleSearch()" *ngIf="!showSearch">Скрыть поиск </span>
+  </div>
+
+  <div class="col-md-8  align-self-center" [ngClass]="{'founded-center': isMobile, 'text-right':!isMobile}">
+    <span class="founded">Найдено задач: {{totalTasksFounded}}</span>
+  </div>
+</div>
+
+<div class="gap20"></div>
+
+<div class="row ">
   <div class="col-md-12 task-list">
 
-    <div class="card" *ngIf="!isMobile">
-      <!--<div class="card-header card-header-warning">
-        <h4 class="card-title">Task list</h4>
-      </div>-->
+    <div class="card" *ngIf="!isMobile && tasks && tasks.length > 0">
 
-      <div class="card-body table-responsive" *ngIf="tasks && tasks.length > 0">
-        <table [dataSource]="dataSource" mat-table matSort>
-          <ng-container matColumnDef="color">
-            <th *matHeaderCellDef mat-header-cell></th>
-            <td class="col-color" *matCellDef="let task" [style.background-color]="getPriorityColor(task)"
-                mat-cell></td>
-          </ng-container>
+      <div class="card-body">
+        <div class="table-responsive" *ngIf="tasks && tasks.length > 0">
+          <table [dataSource]="dataSource" mat-table matSort data-step="2"
+                 data-intro="Список всех задач с возможностью редактирования"
+                 data-position='bottom'>
+            <ng-container matColumnDef="color">
+              <th *matHeaderCellDef mat-header-cell></th>
+              <td class="col-color" *matCellDef="let task" [style.background-color]="getPriorityColor(task)"
+                  mat-cell></td>
+            </ng-container>
 
-          <ng-container matColumnDef="id">
-            <th *matHeaderCellDef mat-header-cell></th>
-            <td class="col-id" *matCellDef="let index = index;" mat-cell>
-              {{index + 1}}
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="id">
+              <th *matHeaderCellDef mat-header-cell></th>
+              <td class="col-id" *matCellDef="let index = index;" mat-cell>
+                {{index + 1 + taskSearchValues.pageNumber * taskSearchValues.pageSize}}
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="title">
-            <th *matHeaderCellDef mat-header-cell mat-sort-header="title"> Название</th>
-            <td class="col-title pointer" *matCellDef="let task" [class.completed]="task.completed" mat-cell
-                (click)="openEditTaskDialog(task)">
-              {{task.title}}
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="title">
+              <th *matHeaderCellDef mat-header-cell> Название</th>
+              <td class="col-title title pointer" *matCellDef="let task" [class.completed]="task.completed" mat-cell
+                  (click)="openEditDialog(task)">
+                {{task.title}}
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="date">
-            <th *matHeaderCellDef mat-header-cell mat-sort-header="date"> Срок</th>
-            <td class="col-date" *matCellDef="let task"
-                [ngClass]="{'completed': task.completed, 'no-value': task.date == null}"
-                mat-cell>
-              {{task.date | taskDate}}
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="date">
+              <th *matHeaderCellDef mat-header-cell> Срок</th>
+              <td class="col-date" *matCellDef="let task"
+                  [ngClass]="{'completed': task.completed, 'nodate': task.date == null}"
+                  mat-cell>
+                {{task.date | taskDate}}
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="priority">
-            <th *matHeaderCellDef mat-header-cell mat-sort-header="priority"> Приоритет</th>
-            <td class="col-priority" *matCellDef="let task"
-                [ngClass]="{'completed': task.completed, 'no-value': task.priority == null}"
-                mat-cell>
-              {{task.priority ? task.priority.title : "Без приоритета"}}
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="priorities">
+              <th *matHeaderCellDef mat-header-cell> Приоритет</th>
+              <td class="col-priority" *matCellDef="let task"
+                  [ngClass]="{'completed': task.completed, 'nopriority': task.priority == null}"
+                  mat-cell>
+                {{task.priority ? task.priority.title : "Без приоритета"}}
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="category">
-            <th *matHeaderCellDef mat-header-cell mat-sort-header="category"> Категория</th>
-            <td class="col-category" *matCellDef="let task"
-                [ngClass]="{'completed': task.completed, 'no-value': task.category == null, 'link': !task.completed && task.category}"
-                mat-cell (click)="!task.completed && task.category && onSelectCategory(task.category)">
-              {{task.category ? task.category.title : "Без категории"}}
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="categories">
+              <th *matHeaderCellDef mat-header-cell> Категория</th>
+              <td class="col-category" *matCellDef="let task"
+                  [ngClass]="{'completed': task.completed, 'nocategory': task.category == null}"
+                  mat-cell>
+                {{task.category ? task.category.title : "Без категории"}}
+                <!--{{task.category ? task.category.title : "Без категории"}}-->
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="operations">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td class="col-operations" mat-cell *matCellDef="let task" [class.completed]="task.completed">
-              <button mat-icon-button (click)="openDeleteDialog(task)" class="delete-icon">
-                <mat-icon aria-hidden="false">delete</mat-icon>
-              </button>
+            <ng-container matColumnDef="operations">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td class="col-operations" mat-cell *matCellDef="let task" [class.completed]="task.completed">
+                <button mat-icon-button (click)="openDeleteDialog(task)" class="delete-icon">
+                  <mat-icon aria-hidden="false">delete</mat-icon>
+                </button>
 
-              <button mat-icon-button (click)="openEditTaskDialog(task)" class="edit-icon">
-                <mat-icon aria-hidden="false">edit</mat-icon>
-              </button>
-            </td>
-          </ng-container>
+                <button mat-icon-button (click)="openEditDialog(task)" class="edit-icon">
+                  <mat-icon aria-hidden="false">edit</mat-icon>
+                </button>
+              </td>
+            </ng-container>
 
-          <ng-container matColumnDef="select">
-            <th mat-header-cell *matHeaderCellDef></th>
-            <td class="col-select text-right" mat-cell *matCellDef="let task">
-              <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? onToggleStatus(task) : null"
-                            [checked]="task.completed">
-              </mat-checkbox>
-            </td>
-          </ng-container>
+            <ng-container matColumnDef="select">
+              <th mat-header-cell *matHeaderCellDef></th>
+              <td class="col-select text-right" mat-cell *matCellDef="let task">
+                <mat-checkbox (click)="$event.stopPropagation()" (change)="$event ? onToggleCompleted(task) : null"
+                              [checked]="!!task.completed">
+                </mat-checkbox>
+              </td>
+            </ng-container>
 
-          <tr *matHeaderRowDef="displayedColumns; " mat-header-row></tr>
+            <tr *matHeaderRowDef="displayedColumns; " mat-header-row></tr>
 
-          <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
-        </table>
+            <tr *matRowDef="let row; columns: displayedColumns;" mat-row></tr>
+          </table>
 
-        <mat-paginator [pageSizeOptions]="[10, 20, 50, 100]" showFirstLastButtons></mat-paginator>
+          <mat-paginator (page)="pageChanged($event)" [pageIndex]="taskSearchValues.pageNumber"
+                         [pageSize]="taskSearchValues.pageSize" [length]="totalTasksFounded"
+                         [pageSizeOptions]="[5, 10, 20, 50, 100]"
+                         showFirstLastButtons>
+          </mat-paginator>
+        </div>
       </div>
 
-      <div *ngIf="tasks && tasks.length == 0"><p class="not-found">Ничего не найдено</p></div>
     </div>
 
+    <div *ngIf="tasks && tasks.length == 0"><p class="not-found">Ничего не найдено</p></div>
 
-    <div *ngIf="isMobile && tasks.length > 0">
+    <div *ngIf="isMobile && tasks && tasks.length > 0">
       <div *ngFor="let task of tasks; let index = index"
            [ngClass]="{'completed': task.completed}">
 
-        <div (click)="$event.stopPropagation(); openEditTaskDialog(task)"
+        <div (click)="$event.stopPropagation(); openEditDialog(task)"
              [ngClass]="{'background-completed': task.completed}"
              class="card card-mobile">
 
@@ -171,22 +223,22 @@
           </div>
 
           <div class="row">
-            <div class="mobile-title-inner col-9 col-md-10 align-top">
+            <div class="mobile-title-inner col-9">
               <div [class.completed]="task.completed" class="mobile-title">
                 {{task.title}}
               </div>
             </div>
 
-            <div class="col-2 col-md-1 align-top mobile-check text-right">
-              <button class="nowidth" (click)="$event.stopPropagation(); onToggleStatus(task)"
+            <div class="col-2 align-top mobile-check">
+              <button (click)="$event.stopPropagation(); onToggleCompleted(task)"
                       *ngIf="!task.completed" mat-icon-button>
-                <mat-icon (click)="$event.stopPropagation(); onToggleStatus(task)"
+                <mat-icon (click)="$event.stopPropagation(); onToggleCompleted(task)"
                           class="check-icon-notcompleted">
                   check_circle_outline
                 </mat-icon>
               </button>
 
-              <button class="nowidth" (click)="$event.stopPropagation(); onToggleStatus(task)"
+              <button (click)="$event.stopPropagation(); onToggleCompleted(task)"
                       *ngIf="task.completed" mat-icon-button>
                 <mat-icon class="check-icon-completed">check_circle</mat-icon>
               </button>
@@ -205,7 +257,7 @@
 
               <div *ngIf="task.priority" class="mobile-priority">
                 <p [ngClass]="{'priority': !task.completed, 'completed': task.completed}"
-                   [style.background-color]="getMobilePriorityBgColor(task)">
+                   [style.background-color]="getPriorityBgColor(task)">
                   {{task.priority.title}}
                 </p>
               </div>
@@ -219,13 +271,5 @@
         </div>
       </div>
     </div>
-
-
-    <div *ngIf="isMobile && tasks.length == 0">
-      <p class="not-found">Ничего не найдено</p>
-    </div>
-
-
   </div>
-
 </div>
